# wbfs

./: .gitignore  CMakeLists.txt  LICENSE
include/wbfs/: CMakeLists.txt  libwbfs_os.h
src/: CMakeLists.txt  file-formats.c  libwbfs.c  wiidisc.c
